--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,19 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+
+.animate-scroll{
+  display: inline-block;
+  animation: scroll-horizontal 12s linear infinite;
+  min-width: max-content;
+}
+
+@keyframes scroll-horizontal {
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
